[tool.poetry]
name = "data-cleaner"
version = "0.1.0"
description = ""
authors = ["Saddam Hussain <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = "^1.32.2"
pandas = "^2.2.2"
openai = "^1.23.6"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"